--- a/en/index.html
+++ b/en/index.html
@@ -4,15 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Onnis Webpage</title>
-<style>
-  body {
-    background-color: #EAF6F6;
-
-  }
-  hr {
-    background-color: white;
-  }
-</style>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
