--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Suomi or English</title>
-  </head>
-  <body>
-    <h2><a href="en/index.html">In english</a></h2>
-    <h2><a href="fi/index.html">In finnish</a></h2>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap" rel="stylesheet">
+    <title>Viljami</title>
+</head>
+<body id="center">
+    <h1>Viljami bot</h1>
+    <h3 class="description">Discord bot for all your needs and more</h3>
+    <dl class="devs">
+        <dd><a href="https://github.com/onnileivo">Onni Leivo</a></dd>
+        <dd>Website and bot developer</dd>
+        <hr>
+        <dd><a href="https://github.com/IIgorrrrr">Iiro Heinonen</a></dd>
+        <dd>Bot developer</dd>
+    </dl>
+</body>
 </html>
